[package]
name = "tide-auth"
version = "0.1.0"
authors = ["zuiyu1998 <1542844298@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16"
async-trait = "0.1.42"
http-types = "2.10"
async-std = { version = "1.9", features = ["attributes"] }
base64 = "0.13"